// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image-set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="file__FullWrapper-xj24ry-0 hlyhzI"
  >
    <div
      className="file__TitleWrapper-xj24ry-3 dBenfq"
      data-layout="full"
    >
      <div
        className="file__Title-xj24ry-4 jmRuoo"
      >
        The Work of Bruce M. Sherman
      </div>
      <div
        className="file__SubTitle-xj24ry-5 cYhbni"
      >
        <div
          className="file__SubTitlePrompt-xj24ry-6 knCCQS"
        >
          View Slideshow
        </div>
        <div
          className="file__SubTitleCount-xj24ry-7 eVHHTp"
        >
          3
           Images
        </div>
      </div>
    </div>
    <div
      className="file__IconContainer-xj24ry-8 ctnrzW"
    >
      <svg
        data-name="imageset"
        id="imageset"
        viewBox="0 0 44 44"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
          transform="translate(-6728.67 -507.72)"
        />
        <polygon
          points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
        />
        <polygon
          points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
        />
      </svg>
    </div>
  </div>
  <img
    src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
    width="100%"
  />
</div>
`;

exports[`renders a mini image-set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="file__MiniWrapper-xj24ry-1 jlVInL"
  >
    <img
      height="100%"
      src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
      width="auto"
    />
    <div
      className="file__MiniInner-xj24ry-2 cvYwsJ"
    >
      <div
        className="file__TitleWrapper-xj24ry-3 dBenfq"
        data-layout="mini"
      >
        <div
          className="file__Title-xj24ry-4 jmRuoo"
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="file__SubTitle-xj24ry-5 cYhbni"
        >
          <div
            className="file__SubTitlePrompt-xj24ry-6 knCCQS"
          >
            View Slideshow
          </div>
          <div
            className="file__SubTitleCount-xj24ry-7 eVHHTp"
          >
            3
             Images
          </div>
        </div>
      </div>
      <div
        className="file__IconContainer-xj24ry-8 ctnrzW"
      >
        <svg
          data-name="imageset"
          id="imageset"
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
            transform="translate(-6728.67 -507.72)"
          />
          <polygon
            points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
          />
          <polygon
            points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
          />
        </svg>
      </div>
    </div>
  </div>
  
</div>
`;
